linkler.txt
-bcc tutorial: https://eunomia.dev/tutorials/1-helloworld/#installing-the-necessary-software-and-tools
-ubuntu bpf setup: https://thegraynode.io/posts/bpf_dev_env/
-ubuntu bcc setup: https://www.flamingbytes.com/blog/how-to-install-bcc-on-ubuntu-22-04/
-video example: https://www.youtube.com/watch?v=lrSExTfS-iQ&list=PLDX-f9ry9CQIASlBBlrlY06Tgnh4gLThn&index=1
-tc filters: https://fedepaol.github.io/blog/2023/04/06/ebpf-tc-filters-for-egress-traffic/
-bpf reference guide: https://docs.cilium.io/en/stable/reference-guides/bpf/index.html
-bcc documentation: https://github.com/iovisor/bcc/blob/master/docs/reference_guide.md#1-kprobes
		    https://bcc.readthedocs.io/en/stable/
-bcc source code: https://github.com/iovisor/bcc
-classful queueing disciplines: https://tldp.org/HOWTO/Adv-Routing-HOWTO/lartc.qdisc.classful.html
-bpf header file: https://github.com/torvalds/linux/blob/master/include/uapi/linux/bpf.h
-ebpf for humans: https://medium.com/@ilaygilman
-bcc version issue solution: https://github.com/iovisor/bcc/issues/3993
-ebpf tutorials: https://eunomia.dev/tutorials/1-helloworld/#installing-the-necessary-software-and-tools
-bpf implementation source: https://addozhang.medium.com/accelerate-network-packets-transmission-with-ebpf-cec744c6b8b5
			    https://addozhang.medium.com/exploring-ebpf-implementation-through-linux-source-code-8220897a9f2e
-sample project: https://github.com/addozhang/ebpf-sockops
-ebpf tc filter for egress traffic: https://fedepaol.github.io/blog/2023/04/06/ebpf-tc-filters-for-egress-traffic/
-tc direct action mode for ebpf: https://qmonnet.github.io/whirl-offload/2020/04/11/tc-bpf-direct-action/


https://stackoverflow.com/questions/77193520/how-do-i-activate-a-bcc-ebpf-program-that-modifies-outgoing-egress-network-traff

error:
/virtual/main.c:5:9: error: type name requires a specifier or qualifier
        __uint(type, BPF_MAP_TYPE_ARRAY);
        ^
/virtual/main.c:5:16: error: a parameter list without types is only allowed in a function definition
        __uint(type, BPF_MAP_TYPE_ARRAY);
               ^
/virtual/main.c:6:9: error: type name requires a specifier or qualifier
        __type(key, u32); //__u32
        ^
/virtual/main.c:6:21: error: unexpected type name 'u32': expected identifier
        __type(key, u32); //__u32
                    ^
/virtual/main.c:6:16: error: a parameter list without types is only allowed in a function definition
        __type(key, u32); //__u32
               ^
/virtual/main.c:7:9: error: type name requires a specifier or qualifier
        __type(value, u32); //__u32
        ^
/virtual/main.c:7:23: error: unexpected type name 'u32': expected identifier
        __type(value, u32); //__u32
                      ^
/virtual/main.c:7:16: error: a parameter list without types is only allowed in a function definition
        __type(value, u32); //__u32
               ^
/virtual/main.c:7:9: error: duplicate member '__type'
        __type(value, u32); //__u32
        ^
/virtual/main.c:6:9: note: previous declaration is here
        __type(key, u32); //__u32
        ^
/virtual/main.c:8:9: error: type name requires a specifier or qualifier
        __uint(max_entries, MAX_INTERFACE);
        ^
/virtual/main.c:8:29: error: expected identifier
        __uint(max_entries, MAX_INTERFACE);
                            ^
/virtual/main.c:2:23: note: expanded from macro 'MAX_INTERFACE'
#define MAX_INTERFACE 16
                      ^
/virtual/main.c:8:9: error: duplicate member '__uint'
        __uint(max_entries, MAX_INTERFACE);
        ^
/virtual/main.c:5:9: note: previous declaration is here
        __uint(type, BPF_MAP_TYPE_ARRAY);
        ^
/virtual/main.c:9:2: error: expected ';' after struct
} interface_map SEC(".maps");
 ^
/virtual/main.c:9:3: error: unknown type name 'interface_map'
} interface_map SEC(".maps");
  ^
/virtual/main.c:9:21: error: expected parameter declarator
} interface_map SEC(".maps");
                    ^
/virtual/main.c:9:21: error: expected ')'
/virtual/main.c:9:20: note: to match this '('
} interface_map SEC(".maps");
                   ^
/virtual/main.c:11:5: error: expected parameter declarator
SEC("tc");
    ^
/virtual/main.c:11:5: error: expected ')'
/virtual/main.c:11:4: note: to match this '('
SEC("tc");
   ^
/virtual/main.c:11:1: warning: type specifier missing, defaults to 'int' [-Wimplicit-int]
SEC("tc");

